--- a/Watcher/configs/config.json
+++ b/Watcher/configs/config.json
@@ -1,7 +1,8 @@
 {
     "server": {
         "host": "localhost",
-        "port": 8000
+        "port": 8000,
+        "static_dir": "./static/"
     },
     "database": {
         "host": "localhost",
